# fsw_cosmic

./: .python-version  Makefile  README.md
apps/uant_app/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
apps/uant_app/config/: default_uant_app_fcncodes.h  default_uant_app_interface_cfg.h  default_uant_app_internal_cfg.h  default_uant_app_mission_cfg.h  default_uant_app_msg.h  default_uant_app_msgdefs.h  default_uant_app_msgids.h  default_uant_app_msgstruct.h  default_uant_app_perfids.h  default_uant_app_platform_cfg.h  default_uant_app_tbl.h  default_uant_app_tbldefs.h  default_uant_app_tblstruct.h  default_uant_app_topicids.h
apps/uant_app/device/inc/uant/: uant.h  uant_i2c.h
apps/uant_app/device/src/: uant.c
apps/uant_app/fsw/inc/: uant_app_eventids.h
apps/uant_app/fsw/src/: uant_app.c  uant_app.h  uant_app_cmds.c  uant_app_cmds.h  uant_app_dispatch.c  uant_app_dispatch.h  uant_app_eds_dispatch.c  uant_app_utils.c  uant_app_utils.h  uant_app_version.h
apps/uant_app/fsw/tables/: uant_app_tbl.c
apps/uant_app/unit-test/: CMakeLists.txt
apps/uant_app/unit-test/common/: eventcheck.c  eventcheck.h  setup.c
apps/uant_app/unit-test/coveragetest/: coveragetest_sample_app.c  coveragetest_sample_app_cmds.c  coveragetest_sample_app_dispatch.c  coveragetest_sample_app_eds_dispatch.c  coveragetest_sample_app_utils.c  sample_app_coveragetest_common.h
apps/uant_app/unit-test/stubs/: uant_app_cmds_stubs.c  uant_app_dispatch_stubs.c  uant_app_global_stubs.c  uant_app_stubs.c  uant_app_utils_stubs.c
cosmic_defs/: default_osconfig.h  obc_cfe_es_startup.scr  (+1 more)
(+34 files in other folders)
